Makes changes to application withdrawal logic to update the number of units and creating receipt class and controller for logic